src/main/java/fr/theogiraudet/json_command_parser/core/JsonCommandSyntaxParser.java
package fr.theogiraudet.json_command_parser.core;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class JsonCommandSyntaxParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.8", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, TYPE_QUOTED=17, 
		STRING=18, BOOLEAN=19, FLOAT=20, INTEGER=21, BACK_LINE=22, WHITESPACE=23, 
		COMMENT=24;
	public static final int
		RULE_root = 0, RULE_descriptor = 1, RULE_descriptor_expressions = 2, RULE_description = 3, 
		RULE_aliases = 4, RULE_permissions = 5, RULE_arguments = 6, RULE_argument = 7, 
		RULE_argument_expressions = 8, RULE_type = 9, RULE_id = 10, RULE_matches = 11, 
		RULE_execute = 12, RULE_keep_value = 13, RULE_tag = 14, RULE_array_string = 15, 
		RULE_int_lex = 16, RULE_float_lex = 17, RULE_boolean_lex = 18, RULE_string_lex = 19, 
		RULE_type_lex = 20;
	private static String[] makeRuleNames() {
		return new String[] {
			"root", "descriptor", "descriptor_expressions", "description", "aliases", 
			"permissions", "arguments", "argument", "argument_expressions", "type", 
			"id", "matches", "execute", "keep_value", "tag", "array_string", "int_lex", 
			"float_lex", "boolean_lex", "string_lex", "type_lex"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'{'", "':'", "'}'", "','", "'\"description\"'", "'\"aliases\"'", 
			"'\"permissions\"'", "'\"arguments\"'", "'['", "']'", "'\"type\"'", "'\"id\"'", 
			"'\"matches\"'", "'\"execute\"'", "'\"keep_value\"'", "'\"tag\"'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, "TYPE_QUOTED", "STRING", "BOOLEAN", "FLOAT", 
			"INTEGER", "BACK_LINE", "WHITESPACE", "COMMENT"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "JsonCommandSyntax.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public JsonCommandSyntaxParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class RootContext extends ParserRuleContext {
		public String_lexContext string_lex() {
			return getRuleContext(String_lexContext.class,0);
		}
		public DescriptorContext descriptor() {
			return getRuleContext(DescriptorContext.class,0);
		}
		public RootContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_root; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JsonCommandSyntaxListener ) ((JsonCommandSyntaxListener)listener).enterRoot(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JsonCommandSyntaxListener ) ((JsonCommandSyntaxListener)listener).exitRoot(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JsonCommandSyntaxVisitor ) return ((JsonCommandSyntaxVisitor<? extends T>)visitor).visitRoot(this);
			else return visitor.visitChildren(this);
		}
	}

	public final RootContext root() throws RecognitionException {
		RootContext _localctx = new RootContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_root);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(42);
			match(T__0);
			setState(43);
			string_lex();
			 Actions.initCommand(); 
			setState(45);
			match(T__1);
			Actions.newContext();
			setState(47);
			match(T__0);
			setState(48);
			descriptor();
			 Actions.deleteContext(); 
			setState(50);
			match(T__2);
			setState(51);
			match(T__2);
			 Actions.resultCommand(); 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DescriptorContext extends ParserRuleContext {
		public List<Descriptor_expressionsContext> descriptor_expressions() {
			return getRuleContexts(Descriptor_expressionsContext.class);
		}
		public Descriptor_expressionsContext descriptor_expressions(int i) {
			return getRuleContext(Descriptor_expressionsContext.class,i);
		}
		public DescriptorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_descriptor; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JsonCommandSyntaxListener ) ((JsonCommandSyntaxListener)listener).enterDescriptor(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JsonCommandSyntaxListener ) ((JsonCommandSyntaxListener)listener).exitDescriptor(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JsonCommandSyntaxVisitor ) return ((JsonCommandSyntaxVisitor<? extends T>)visitor).visitDescriptor(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DescriptorContext descriptor() throws RecognitionException {
		DescriptorContext _localctx = new DescriptorContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_descriptor);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(54);
			descriptor_expressions();
			setState(59);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__3) {
				{
				{
				setState(55);
				match(T__3);
				setState(56);
				descriptor_expressions();
				}
				}
				setState(61);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Descriptor_expressionsContext extends ParserRuleContext {
		public DescriptionContext description() {
			return getRuleContext(DescriptionContext.class,0);
		}
		public AliasesContext aliases() {
			return getRuleContext(AliasesContext.class,0);
		}
		public PermissionsContext permissions() {
			return getRuleContext(PermissionsContext.class,0);
		}
		public ArgumentsContext arguments() {
			return getRuleContext(ArgumentsContext.class,0);
		}
		public ExecuteContext execute() {
			return getRuleContext(ExecuteContext.class,0);
		}
		public Descriptor_expressionsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_descriptor_expressions; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JsonCommandSyntaxListener ) ((JsonCommandSyntaxListener)listener).enterDescriptor_expressions(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JsonCommandSyntaxListener ) ((JsonCommandSyntaxListener)listener).exitDescriptor_expressions(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JsonCommandSyntaxVisitor ) return ((JsonCommandSyntaxVisitor<? extends T>)visitor).visitDescriptor_expressions(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Descriptor_expressionsContext descriptor_expressions() throws RecognitionException {
		Descriptor_expressionsContext _localctx = new Descriptor_expressionsContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_descriptor_expressions);
		try {
			setState(67);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__4:
				enterOuterAlt(_localctx, 1);
				{
				setState(62);
				description();
				}
				break;
			case T__5:
				enterOuterAlt(_localctx, 2);
				{
				setState(63);
				aliases();
				}
				break;
			case T__6:
				enterOuterAlt(_localctx, 3);
				{
				setState(64);
				permissions();
				}
				break;
			case T__7:
				enterOuterAlt(_localctx, 4);
				{
				setState(65);
				arguments();
				}
				break;
			case T__13:
				enterOuterAlt(_localctx, 5);
				{
				setState(66);
				execute();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DescriptionContext extends ParserRuleContext {
		public String_lexContext string_lex() {
			return getRuleContext(String_lexContext.class,0);
		}
		public DescriptionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_description; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JsonCommandSyntaxListener ) ((JsonCommandSyntaxListener)listener).enterDescription(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JsonCommandSyntaxListener ) ((JsonCommandSyntaxListener)listener).exitDescription(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JsonCommandSyntaxVisitor ) return ((JsonCommandSyntaxVisitor<? extends T>)visitor).visitDescription(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DescriptionContext description() throws RecognitionException {
		DescriptionContext _localctx = new DescriptionContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_description);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(69);
			match(T__4);
			setState(70);
			match(T__1);
			setState(71);
			string_lex();
			 Actions.setDescription(); 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AliasesContext extends ParserRuleContext {
		public Array_stringContext array_string() {
			return getRuleContext(Array_stringContext.class,0);
		}
		public AliasesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_aliases; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JsonCommandSyntaxListener ) ((JsonCommandSyntaxListener)listener).enterAliases(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JsonCommandSyntaxListener ) ((JsonCommandSyntaxListener)listener).exitAliases(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JsonCommandSyntaxVisitor ) return ((JsonCommandSyntaxVisitor<? extends T>)visitor).visitAliases(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AliasesContext aliases() throws RecognitionException {
		AliasesContext _localctx = new AliasesContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_aliases);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(74);
			match(T__5);
			setState(75);
			match(T__1);
			setState(76);
			array_string();
			 Actions.setAliases(); 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PermissionsContext extends ParserRuleContext {
		public Array_stringContext array_string() {
			return getRuleContext(Array_stringContext.class,0);
		}
		public PermissionsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_permissions; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JsonCommandSyntaxListener ) ((JsonCommandSyntaxListener)listener).enterPermissions(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JsonCommandSyntaxListener ) ((JsonCommandSyntaxListener)listener).exitPermissions(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JsonCommandSyntaxVisitor ) return ((JsonCommandSyntaxVisitor<? extends T>)visitor).visitPermissions(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PermissionsContext permissions() throws RecognitionException {
		PermissionsContext _localctx = new PermissionsContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_permissions);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(79);
			match(T__6);
			setState(80);
			match(T__1);
			setState(81);
			array_string();
			 Actions.setPermissions(); 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ArgumentsContext extends ParserRuleContext {
		public List<ArgumentContext> argument() {
			return getRuleContexts(ArgumentContext.class);
		}
		public ArgumentContext argument(int i) {
			return getRuleContext(ArgumentContext.class,i);
		}
		public ArgumentsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_arguments; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JsonCommandSyntaxListener ) ((JsonCommandSyntaxListener)listener).enterArguments(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JsonCommandSyntaxListener ) ((JsonCommandSyntaxListener)listener).exitArguments(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JsonCommandSyntaxVisitor ) return ((JsonCommandSyntaxVisitor<? extends T>)visitor).visitArguments(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ArgumentsContext arguments() throws RecognitionException {
		ArgumentsContext _localctx = new ArgumentsContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_arguments);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(84);
			match(T__7);
			setState(85);
			match(T__1);
			setState(86);
			match(T__8);
			 Actions.stackArguments(); 
			setState(96);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__0) {
				{
				setState(88);
				argument();
				setState(93);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__3) {
					{
					{
					setState(89);
					match(T__3);
					setState(90);
					argument();
					}
					}
					setState(95);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
			}

			setState(98);
			match(T__9);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ArgumentContext extends ParserRuleContext {
		public List<Argument_expressionsContext> argument_expressions() {
			return getRuleContexts(Argument_expressionsContext.class);
		}
		public Argument_expressionsContext argument_expressions(int i) {
			return getRuleContext(Argument_expressionsContext.class,i);
		}
		public ArgumentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_argument; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JsonCommandSyntaxListener ) ((JsonCommandSyntaxListener)listener).enterArgument(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JsonCommandSyntaxListener ) ((JsonCommandSyntaxListener)listener).exitArgument(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JsonCommandSyntaxVisitor ) return ((JsonCommandSyntaxVisitor<? extends T>)visitor).visitArgument(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ArgumentContext argument() throws RecognitionException {
		ArgumentContext _localctx = new ArgumentContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_argument);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			Actions.newContext(); 
			setState(101);
			match(T__0);
			setState(102);
			argument_expressions();
			setState(107);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__3) {
				{
				{
				setState(103);
				match(T__3);
				setState(104);
				argument_expressions();
				}
				}
				setState(109);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(110);
			match(T__2);
			 Actions.deleteContext(); 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Argument_expressionsContext extends ParserRuleContext {
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public TagContext tag() {
			return getRuleContext(TagContext.class,0);
		}
		public MatchesContext matches() {
			return getRuleContext(MatchesContext.class,0);
		}
		public IdContext id() {
			return getRuleContext(IdContext.class,0);
		}
		public ArgumentsContext arguments() {
			return getRuleContext(ArgumentsContext.class,0);
		}
		public ExecuteContext execute() {
			return getRuleContext(ExecuteContext.class,0);
		}
		public Keep_valueContext keep_value() {
			return getRuleContext(Keep_valueContext.class,0);
		}
		public Argument_expressionsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_argument_expressions; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JsonCommandSyntaxListener ) ((JsonCommandSyntaxListener)listener).enterArgument_expressions(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JsonCommandSyntaxListener ) ((JsonCommandSyntaxListener)listener).exitArgument_expressions(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JsonCommandSyntaxVisitor ) return ((JsonCommandSyntaxVisitor<? extends T>)visitor).visitArgument_expressions(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Argument_expressionsContext argument_expressions() throws RecognitionException {
		Argument_expressionsContext _localctx = new Argument_expressionsContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_argument_expressions);
		try {
			setState(120);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__10:
				enterOuterAlt(_localctx, 1);
				{
				setState(113);
				type();
				}
				break;
			case T__15:
				enterOuterAlt(_localctx, 2);
				{
				setState(114);
				tag();
				}
				break;
			case T__12:
				enterOuterAlt(_localctx, 3);
				{
				setState(115);
				matches();
				}
				break;
			case T__11:
				enterOuterAlt(_localctx, 4);
				{
				setState(116);
				id();
				}
				break;
			case T__7:
				enterOuterAlt(_localctx, 5);
				{
				setState(117);
				arguments();
				}
				break;
			case T__13:
				enterOuterAlt(_localctx, 6);
				{
				setState(118);
				execute();
				}
				break;
			case T__14:
				enterOuterAlt(_localctx, 7);
				{
				setState(119);
				keep_value();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TypeContext extends ParserRuleContext {
		public Type_lexContext type_lex() {
			return getRuleContext(Type_lexContext.class,0);
		}
		public TypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_type; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JsonCommandSyntaxListener ) ((JsonCommandSyntaxListener)listener).enterType(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JsonCommandSyntaxListener ) ((JsonCommandSyntaxListener)listener).exitType(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JsonCommandSyntaxVisitor ) return ((JsonCommandSyntaxVisitor<? extends T>)visitor).visitType(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TypeContext type() throws RecognitionException {
		TypeContext _localctx = new TypeContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_type);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(122);
			match(T__10);
			setState(123);
			match(T__1);
			setState(124);
			type_lex();
			 Actions.setType(); 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IdContext extends ParserRuleContext {
		public String_lexContext string_lex() {
			return getRuleContext(String_lexContext.class,0);
		}
		public IdContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_id; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JsonCommandSyntaxListener ) ((JsonCommandSyntaxListener)listener).enterId(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JsonCommandSyntaxListener ) ((JsonCommandSyntaxListener)listener).exitId(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JsonCommandSyntaxVisitor ) return ((JsonCommandSyntaxVisitor<? extends T>)visitor).visitId(this);
			else return visitor.visitChildren(this);
		}
	}

	public final IdContext id() throws RecognitionException {
		IdContext _localctx = new IdContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_id);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(127);
			match(T__11);
			setState(128);
			match(T__1);
			setState(129);
			string_lex();
			 Actions.setId(); 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MatchesContext extends ParserRuleContext {
		public String_lexContext string_lex() {
			return getRuleContext(String_lexContext.class,0);
		}
		public MatchesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_matches; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JsonCommandSyntaxListener ) ((JsonCommandSyntaxListener)listener).enterMatches(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JsonCommandSyntaxListener ) ((JsonCommandSyntaxListener)listener).exitMatches(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JsonCommandSyntaxVisitor ) return ((JsonCommandSyntaxVisitor<? extends T>)visitor).visitMatches(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MatchesContext matches() throws RecognitionException {
		MatchesContext _localctx = new MatchesContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_matches);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(132);
			match(T__12);
			setState(133);
			match(T__1);
			setState(134);
			string_lex();
			 Actions.setMatches(); 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExecuteContext extends ParserRuleContext {
		public String_lexContext string_lex() {
			return getRuleContext(String_lexContext.class,0);
		}
		public ExecuteContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_execute; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JsonCommandSyntaxListener ) ((JsonCommandSyntaxListener)listener).enterExecute(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JsonCommandSyntaxListener ) ((JsonCommandSyntaxListener)listener).exitExecute(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JsonCommandSyntaxVisitor ) return ((JsonCommandSyntaxVisitor<? extends T>)visitor).visitExecute(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ExecuteContext execute() throws RecognitionException {
		ExecuteContext _localctx = new ExecuteContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_execute);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(137);
			match(T__13);
			setState(138);
			match(T__1);
			setState(139);
			string_lex();
			 Actions.setExecute(); 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Keep_valueContext extends ParserRuleContext {
		public Boolean_lexContext boolean_lex() {
			return getRuleContext(Boolean_lexContext.class,0);
		}
		public Keep_valueContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_keep_value; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JsonCommandSyntaxListener ) ((JsonCommandSyntaxListener)listener).enterKeep_value(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JsonCommandSyntaxListener ) ((JsonCommandSyntaxListener)listener).exitKeep_value(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JsonCommandSyntaxVisitor ) return ((JsonCommandSyntaxVisitor<? extends T>)visitor).visitKeep_value(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Keep_valueContext keep_value() throws RecognitionException {
		Keep_valueContext _localctx = new Keep_valueContext(_ctx, getState());
		enterRule(_localctx, 26, RULE_keep_value);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(142);
			match(T__14);
			setState(143);
			match(T__1);
			setState(144);
			boolean_lex();
			 Actions.setKeepValue(); 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
